--- a/build.gradle
+++ b/build.gradle
@@ -22,17 +22,16 @@ dependencies {
             "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}",
             "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
 
-}
-
-
-
-
-dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+    compile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
+
 }
+
+
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
     }
 
