--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,3 +1,15 @@
-<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="3.1">
-
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
+http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+    <servlet>
+        <description></description>
+        <display-name>TestDBServlet</display-name>
+        <servlet-name>TestDBServlet</servlet-name>
+        <servlet-class>vk.testeng.servlet.TestDBServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>TestDBServlet</servlet-name>
+        <url-pattern>/TestDBServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
