--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
 
 }
 
@@ -41,7 +42,7 @@ buildscript {
 }
 
 tomcat {
-    httpPort = 8080
+    httpPort = 8011
     httpsPort = 8443
     enableSSL = true
 
@@ -53,3 +54,5 @@ tomcat {
         }
     }
 }
+
+tomcatRun.outputFile = file('tomcatRunLog.txt')
