--- a/build.gradle
+++ b/build.gradle
@@ -17,15 +17,20 @@ repositories {
 }
 
 dependencies {
-    def tomcatVersion = '8.0.12'
-    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
-            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}",
-            "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
+    def tomcatVersion = '6.0.51'
+    tomcat "org.apache.tomcat:catalina:${tomcatVersion}",
+            "org.apache.tomcat:coyote:${tomcatVersion}",
+            "org.apache.tomcat:jasper:${tomcatVersion}"
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.0.1'
+    compile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
+    providedCompile 'javax.servlet:servlet-api:2.5',
+            'javax.servlet:jsp-api:2.0'
+    compile group: 'postgresql', name: 'postgresql', version: '9.1-901.jdbc4'
+
+
 
 }
 
