--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
+
     <servlet>
-        <description></description>
-        <display-name>TestDBServlet</display-name>
-        <servlet-name>TestDBServlet</servlet-name>
-        <servlet-class>vk.testeng.servlet.TestDBServlet</servlet-class>
+        <display-name>TestManagerServlet</display-name>
+        <servlet-name>TestManagerServlet</servlet-name>
+        <servlet-class>vk.testeng.servlet.TestManagerServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>TestServlet</servlet-name>
+        <servlet-class>vk.testeng.servlet.TestServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>HomeServlet</servlet-name>
@@ -15,16 +19,20 @@
         <servlet-class>vk.testeng.servlet.LoginServlet</servlet-class>
     </servlet>
     <servlet-mapping>
+        <servlet-name>TestManagerServlet</servlet-name>
+        <url-pattern>/manage</url-pattern>
+    </servlet-mapping>
+<servlet-mapping>
+    <servlet-name>TestServlet</servlet-name>
+    <url-pattern>/test</url-pattern>
+</servlet-mapping>
+    <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>HomeServlet</servlet-name>
         <url-pattern>/home</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>TestDBServlet</servlet-name>
-        <url-pattern>/TestDBServlet</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>home</welcome-file>
